--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="format-detection" content="telephone=no">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
 
@@ -20,6 +21,9 @@
         </div>
 
         <nav class="main-header__main-menu main-menu">
+            <button class="main-menu__hamburger">
+                <img src="img/hamburger.png" alt="Показать / скрыть меню">
+            </button>
             <ul class="main-menu__list">
                 <li class="main-menu__item">
                     <a href="#">Объекты</a>
@@ -46,7 +50,7 @@
         </nav>
 
         <div class="main-header__contacts contacts">
-            <p class="contacts__phone">8 888 88 88 98</p>
+            <p class="contacts__phone"><a href="tel:8888888898">8 888 88 88 98</a></p>
             <p class="contacts__text">Звони скорее!</p>
         </div>
     </header>
