Добавил стили для состояний :hover, :active и сделал кастомный :focus

--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
                                 <img src="http://placehold.it/210x200" alt="">
                             </div>
 
-                            <h2 class="apartment-item__title">Однокомнатная №666</h2>
+                            <h2 class="apartment-item__title">Однокомнатная №666</h2>
 
                             <ul class="apartment-item__properties">
                                 <li class="apartment-item__property apartment-item__property--finish">
@@ -147,7 +147,7 @@
                                 <img src="http://placehold.it/210x200" alt="">
                             </div>
 
-                            <h2 class="apartment-item__title">Двухкомнатная №567</h2>
+                            <h2 class="apartment-item__title">Двухкомнатная №567</h2>
 
                             <ul class="apartment-item__properties">
                                 <li class="apartment-item__property apartment-item__property--finish">
@@ -180,7 +180,7 @@
                                 <img src="http://placehold.it/210x200" alt="">
                             </div>
 
-                            <h2 class="apartment-item__title">Трехкомнатная №45</h2>
+                            <h2 class="apartment-item__title">Трехкомнатная №45</h2>
 
                             <ul class="apartment-item__properties">
                                 <li class="apartment-item__property apartment-item__property--finish">
@@ -251,7 +251,7 @@
                                 <img src="http://placehold.it/210x200" alt="">
                             </div>
 
-                            <h2 class="apartment-item__title">Четырехкомнатная №259</h2>
+                            <h2 class="apartment-item__title">Четырехкомнатная №259</h2>
 
                             <ul class="apartment-item__properties">
                                 <li class="apartment-item__property apartment-item__property--finish">
@@ -284,7 +284,7 @@
                                 <img src="http://placehold.it/210x200" alt="">
                             </div>
 
-                            <h2 class="apartment-item__title">Однокомнатная №56</h2>
+                            <h2 class="apartment-item__title">Однокомнатная №56</h2>
 
                             <ul class="apartment-item__properties">
                                 <li class="apartment-item__property apartment-item__property--finish">
@@ -317,7 +317,7 @@
                                 <img src="http://placehold.it/210x200" alt="">
                             </div>
 
-                            <h2 class="apartment-item__title">Трехкомнтаная №46</h2>
+                            <h2 class="apartment-item__title">Трехкомнатная №46</h2>
 
                             <ul class="apartment-item__properties">
                                 <li class="apartment-item__property apartment-item__property--finish">
@@ -350,8 +350,8 @@
                                 <img src="http://placehold.it/210x200" alt="">
                             </div>
 
-                            <h2 class="apartment-item__title">Однокомнатная №2</h2>
-
+                            <h2 class="apartment-item__title">Однокомнатная №2</h2>
+                            
                             <ul class="apartment-item__properties">
                                 <li class="apartment-item__property apartment-item__property--finish">
                                     черновая отделка
@@ -416,7 +416,7 @@
                                 <img src="http://placehold.it/210x200" alt="">
                             </div>
 
-                            <h2 class="apartment-item__title">Однокомнатная №8</h2>
+                            <h2 class="apartment-item__title">Однокомнатная №8</h2>
 
                             <ul class="apartment-item__properties">
                                 <li class="apartment-item__property apartment-item__property--finish">
@@ -449,7 +449,7 @@
                                 <img src="http://placehold.it/210x200" alt="">
                             </div>
 
-                            <h2 class="apartment-item__title">Двухкомнатная №23</h2>
+                            <h2 class="apartment-item__title">Двухкомнатная №23</h2>
 
                             <ul class="apartment-item__properties">
                                 <li class="apartment-item__property apartment-item__property--finish">
