Добавил кнопку для прокрутки наверх и код для этого + код для валидации формы подписки

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+    <button class="to-top-button visually-hidden">
+        <img src="img/up.png" alt="Наверх">
+    </button>
     <header class="main-header">
         <div class="main-header__logo">
             <img src="img/logo.png" alt="Логотип">
